<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/register_title"
        android:textSize="30dp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/register_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/register_email_et"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textPersonName"
         />

    <TextView
        android:id="@+id/register_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/haslo" />

    <EditText
        android:id="@+id/register_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
         />

    <Button
        android:id="@+id/register_me_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_btn" />
</LinearLayout>